# AdventOfCode2021

./: Cargo.toml  README.md  replit.nix
.github/workflows/: rust.yml
.utils/: dayTemplate.rs  humanizeDuration.py  humanizeDuration.sh  newDay.sh
src/: day1.rs  day2.rs  day3.rs  day4.rs  lib.rs  main.rs
src/solutions/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day3.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
