cargcargo-features = ["edition2021"]

[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["runner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner-derive = "0.3.0"
aoc-runner = "0.3.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
